--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,8 @@ ext {
     hamcrestVersion = "2.2"
     junitVersion = "4.13.2"
     legacySupportVersion = "1.0.0"
-    lifecycleVersion = "2.3.0"
+    lifecycleLiveDataVersion = "2.3.0"
+    lifecycleVersion = "2.2.0"
     materialDesignVersion = "1.3.0"
     mockitoVersion = "3.5.5"
     playServicesAuthVersion = "18.1.0"
