--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,10 @@
 buildscript {
     ext.kotlin_version = "1.4.30"
     ext.gradleVersion = "4.1.2"
-    ext.navigationVersion = "2.3.3"
+    ext.navigationVersion = "2.3.4"
     ext.googleServicesVersion = "4.3.5"
     ext.dokkaVersion = "0.10.1"
-    ext.daggerHiltVersion = "2.28-alpha"
+    ext.daggerHiltVersion = "2.31.2-alpha"
 
     repositories {
         google()
@@ -32,7 +32,7 @@ allprojects {
 }
 
 ext {
-    activityKotlinVersion = "1.3.0-alpha03"
+    activityKotlinVersion = "1.3.0-alpha04"
     androidTestJunitVersion = "1.1.2"
     androidXCoreVersion = "1.3.2"
     appCompatVersion = "1.2.0"
@@ -41,7 +41,7 @@ ext {
     coroutinesVersion = "1.4.3"
     daggerHiltLifecycleVersion = "1.0.0-alpha03"
     espressoVersion = "3.3.0"
-    fragmentKotlinVersion = "1.3.0"
+    fragmentKotlinVersion = "1.3.1"
     hamcrestVersion = "2.2"
     junitVersion = "4.13.2"
     legacySupportVersion = "1.0.0"
@@ -52,6 +52,66 @@ ext {
     playServicesAuthVersion = "18.1.0"
     recyclerViewVersion = "1.1.0"
     retrofit2Version = "2.1.0"
+
+    libs = [
+        kotlin_std            : "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version",
+        kotlin_reflect        : "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version",
+        core                  : "androidx.core:core-ktx:$androidXCoreVersion",
+        appCompat             : "androidx.appcompat:appcompat:$appCompatVersion",
+        constraint_layout     : "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion",
+        legacy                : "androidx.legacy:legacy-support-v4:$legacySupportVersion",
+        recycler_view         : "androidx.recyclerview:recyclerview:$recyclerViewVersion",
+
+        // Activity and fragment extensions for kotlin
+        activity              : "androidx.activity:activity-ktx:$activityKotlinVersion",
+        fragment              : "androidx.fragment:fragment-ktx:$fragmentKotlinVersion",
+
+        // Material design
+        material              : "com.google.android.material:material:$materialDesignVersion",
+
+        // Lifecycle
+        lifecycle_viewmodel   : "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion",
+        lifecycle_livedata    : "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleLiveDataVersion",
+        lifecycle_runtime     : "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion",
+        lifecycle_extensions  : "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion",
+        lifecycle_vm_state    : "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycleVersion",
+
+        // Coroutines
+        coroutines_core       : "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion",
+        coroutines_services   : "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$coroutinesVersion",
+
+        // Navigation
+        nav_fragment          : "androidx.navigation:navigation-fragment-ktx:$navigationVersion",
+        nav_ui                : "androidx.navigation:navigation-ui-ktx:$navigationVersion",
+        nav_syn_fragment      : "androidx.navigation:navigation-dynamic-features-fragment:$navigationVersion",
+
+        // Dagger Hilt
+        hilt                  : "com.google.dagger:hilt-android:$daggerHiltVersion",
+        hilt_compiler_kapt    : "com.google.dagger:hilt-android-compiler:$daggerHiltVersion",
+        hilt_lifecycle        : "androidx.hilt:hilt-lifecycle-viewmodel:$daggerHiltLifecycleVersion",
+
+        // Retrofit2 and Moshi
+        retrofit              : "com.squareup.retrofit2:retrofit:$retrofit2Version",
+        moshi                 : "com.squareup.retrofit2:converter-moshi:$retrofit2Version",
+
+        // Unit testing
+        junit                 : "junit:junit:$junitVersion",
+        core_testing          : "androidx.arch.core:core-testing:$archVersion",
+        hamcrest              : "org.hamcrest:hamcrest:$hamcrestVersion",
+        coroutines_test       : "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesVersion",
+        mockito               : "org.mockito:mockito-inline:$mockitoVersion",
+        hilt_test             : "com.google.dagger:hilt-android-testing:$daggerHiltVersion",
+        hilt_kapt_test        : "com.google.dagger:hilt-android-compiler:$daggerHiltVersion",
+
+        // Android testing
+        junit_android_test    : "androidx.test.ext:junit:$androidTestJunitVersion",
+        espresso_android_test : "androidx.test.espresso:espresso-core:$espressoVersion",
+        mockito_android_test  : "org.mockito:mockito-android:$mockitoVersion",
+        nav_android_test      : "androidx.navigation:navigation-testing:$navigationVersion",
+        fragment_debug        : "androidx.fragment:fragment-testing:$fragmentKotlinVersion",
+        hilt_android_test     : "com.google.dagger:hilt-android-testing:$daggerHiltVersion",
+        hilt_kapt_android_test: "com.google.dagger:hilt-android-compiler:$daggerHiltVersion"
+    ]
 }
 
 task clean(type: Delete) {
