--- a/Data/build.gradle
+++ b/Data/build.gradle
@@ -62,6 +62,16 @@ dependencies {
     // Retrofit and moshi
     implementation libs.retrofit
     implementation libs.moshi
+    implementation libs.moshi_converter
+
+    implementation "com.github.kittinunf.result:result:4.0.0"
+    implementation "com.github.kittinunf.result:result-coroutines:4.0.0"
+
+    implementation "com.github.kittinunf.fuel:fuel:2.3.1"
+    implementation "com.github.kittinunf.fuel:fuel-android:2.3.1"
+    implementation "com.github.kittinunf.fuel:fuel-coroutines:2.3.1"
+    implementation "com.github.kittinunf.fuel:fuel-gson:2.3.1"
+    implementation "com.google.code.gson:gson:2.8.6"
 
     // Unit testing
     testImplementation libs.junit
