--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ ext {
     lifecycleVersion = "2.2.0"
     materialDesignVersion = "1.3.0"
     mockitoVersion = "3.5.5"
+    moshiVersion = "1.11.0"
     playServicesAuthVersion = "18.1.0"
     recyclerViewVersion = "1.1.0"
     retrofit2Version = "2.1.0"
@@ -92,7 +93,8 @@ ext {
 
         // Retrofit2 and Moshi
         retrofit              : "com.squareup.retrofit2:retrofit:$retrofit2Version",
-        moshi                 : "com.squareup.retrofit2:converter-moshi:$retrofit2Version",
+        moshi                 : "com.squareup.moshi:moshi-kotlin:$moshiVersion",
+        moshi_converter       : "com.squareup.retrofit2:converter-moshi:$retrofit2Version",
 
         // Unit testing
         junit                 : "junit:junit:$junitVersion",
