--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,10 @@ dependencies {
     implementation "com.github.kittinunf.fuel:fuel-coroutines:2.3.1"
     implementation "com.github.kittinunf.fuel:fuel-gson:2.3.1"
     implementation "com.google.code.gson:gson:2.8.6"
+    implementation "com.android.volley:volley:1.2.0"
+
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
     // Activity and fragment extensions for kotlin
     implementation libs.activity
