--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,8 @@ ext {
     daggerHiltLifecycleVersion = "1.0.0-alpha03"
     espressoVersion = "3.3.0"
     fragmentKotlinVersion = "1.3.1"
+    fuelVersion = "2.3.1"
+    gsonVersion = "2.8.6"
     hamcrestVersion = "2.2"
     junitVersion = "4.13.2"
     legacySupportVersion = "1.0.0"
@@ -52,6 +54,7 @@ ext {
     moshiVersion = "1.11.0"
     playServicesAuthVersion = "18.1.0"
     recyclerViewVersion = "1.1.0"
+    resultVersion = "4.0.0"
     retrofit2Version = "2.1.0"
 
     libs = [
@@ -91,10 +94,14 @@ ext {
         hilt_compiler_kapt    : "com.google.dagger:hilt-android-compiler:$daggerHiltVersion",
         hilt_lifecycle        : "androidx.hilt:hilt-lifecycle-viewmodel:$daggerHiltLifecycleVersion",
 
-        // Retrofit2 and Moshi
-        retrofit              : "com.squareup.retrofit2:retrofit:$retrofit2Version",
-        moshi                 : "com.squareup.moshi:moshi-kotlin:$moshiVersion",
-        moshi_converter       : "com.squareup.retrofit2:converter-moshi:$retrofit2Version",
+        // Internet connection
+        gson                  : "com.google.code.gson:gson:$gsonVersion",
+        result                : "com.github.kittinunf.result:result:$resultVersion",
+        result_coroutines      : "com.github.kittinunf.result:result-coroutines:$resultVersion",
+        fuel                  : "com.github.kittinunf.fuel:fuel:$fuelVersion",
+        fuel_android          : "com.github.kittinunf.fuel:fuel-android:$fuelVersion",
+        fuel_coroutines      : "com.github.kittinunf.fuel:fuel-coroutines:$fuelVersion",
+        fuel_gson             : "com.github.kittinunf.fuel:fuel-gson:$fuelVersion",
 
         // Unit testing
         junit                 : "junit:junit:$junitVersion",
