Add the screen for user creation

--- a/Data/build.gradle
+++ b/Data/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     testImplementation libs.hamcrest
     testImplementation libs.coroutines_test
     testImplementation libs.mockito
+    testImplementation libs.mockk
     testImplementation libs.hilt_test
     kaptTest libs.hilt_kapt_test
 }
