--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ ext {
     lifecycleVersion = "2.2.0"
     materialDesignVersion = "1.3.0"
     mockitoVersion = "3.5.5"
+    mockkVersion = "1.11.0"
     moshiVersion = "1.11.0"
     playServicesAuthVersion = "18.1.0"
     recyclerViewVersion = "1.1.0"
@@ -97,10 +98,10 @@ ext {
         // Internet connection
         gson                  : "com.google.code.gson:gson:$gsonVersion",
         result                : "com.github.kittinunf.result:result:$resultVersion",
-        result_coroutines      : "com.github.kittinunf.result:result-coroutines:$resultVersion",
+        result_coroutines     : "com.github.kittinunf.result:result-coroutines:$resultVersion",
         fuel                  : "com.github.kittinunf.fuel:fuel:$fuelVersion",
         fuel_android          : "com.github.kittinunf.fuel:fuel-android:$fuelVersion",
-        fuel_coroutines      : "com.github.kittinunf.fuel:fuel-coroutines:$fuelVersion",
+        fuel_coroutines       : "com.github.kittinunf.fuel:fuel-coroutines:$fuelVersion",
         fuel_gson             : "com.github.kittinunf.fuel:fuel-gson:$fuelVersion",
 
         // Unit testing
@@ -109,6 +110,7 @@ ext {
         hamcrest              : "org.hamcrest:hamcrest:$hamcrestVersion",
         coroutines_test       : "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesVersion",
         mockito               : "org.mockito:mockito-inline:$mockitoVersion",
+        mockk                 : "io.mockk:mockk:$mockkVersion",
         hilt_test             : "com.google.dagger:hilt-android-testing:$daggerHiltVersion",
         hilt_kapt_test        : "com.google.dagger:hilt-android-compiler:$daggerHiltVersion",
 
@@ -116,6 +118,7 @@ ext {
         junit_android_test    : "androidx.test.ext:junit:$androidTestJunitVersion",
         espresso_android_test : "androidx.test.espresso:espresso-core:$espressoVersion",
         mockito_android_test  : "org.mockito:mockito-android:$mockitoVersion",
+        mockk_android_test    : "io.mockk:mockk-android:$mockkVersion",
         nav_android_test      : "androidx.navigation:navigation-testing:$navigationVersion",
         fragment_debug        : "androidx.fragment:fragment-testing:$fragmentKotlinVersion",
         hilt_android_test     : "com.google.dagger:hilt-android-testing:$daggerHiltVersion",
