Add hilt worker.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,11 @@ dependencies {
     implementation libs.hilt
     kapt libs.hilt_compiler_kapt
     implementation libs.hilt_lifecycle
+    implementation libs.hilt_work
+    kapt libs.hilt_work_kapt
+
+    // Work
+    implementation libs.work
 
     // Unit testing
     testImplementation libs.junit
@@ -118,4 +123,5 @@ dependencies {
     debugImplementation libs.fragment_debug
     androidTestImplementation libs.hilt_android_test
     kaptAndroidTest libs.hilt_kapt_android_test
+    androidTestImplementation libs.work_android_test
 }
