--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.30"
+    ext.kotlin_version = "1.4.32"
     ext.gradleVersion = "4.1.2"
     ext.navigationVersion = "2.3.4"
     ext.googleServicesVersion = "4.3.5"
@@ -40,6 +40,7 @@ ext {
     constraintLayoutVersion = "2.0.4"
     coroutinesVersion = "1.4.3"
     daggerHiltLifecycleVersion = "1.0.0-alpha03"
+    daggerHiltWorkVersion = "1.0.0-beta01"
     espressoVersion = "3.3.0"
     fragmentKotlinVersion = "1.3.1"
     fuelVersion = "2.3.1"
@@ -57,6 +58,7 @@ ext {
     recyclerViewVersion = "1.1.0"
     resultVersion = "4.0.0"
     retrofit2Version = "2.1.0"
+    workVersion = "2.5.0"
 
     libs = [
         kotlin_std            : "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version",
@@ -94,6 +96,8 @@ ext {
         hilt                  : "com.google.dagger:hilt-android:$daggerHiltVersion",
         hilt_compiler_kapt    : "com.google.dagger:hilt-android-compiler:$daggerHiltVersion",
         hilt_lifecycle        : "androidx.hilt:hilt-lifecycle-viewmodel:$daggerHiltLifecycleVersion",
+        hilt_work             : "androidx.hilt:hilt-work:$daggerHiltWorkVersion",
+        hilt_work_kapt        : "androidx.hilt:hilt-compiler:$daggerHiltWorkVersion",
 
         // Internet connection
         gson                  : "com.google.code.gson:gson:$gsonVersion",
@@ -103,6 +107,9 @@ ext {
         fuel_android          : "com.github.kittinunf.fuel:fuel-android:$fuelVersion",
         fuel_coroutines       : "com.github.kittinunf.fuel:fuel-coroutines:$fuelVersion",
         fuel_gson             : "com.github.kittinunf.fuel:fuel-gson:$fuelVersion",
+
+        // Work manager
+        work                  : "androidx.work:work-runtime-ktx:$workVersion",
 
         // Unit testing
         junit                 : "junit:junit:$junitVersion",
@@ -122,7 +129,8 @@ ext {
         nav_android_test      : "androidx.navigation:navigation-testing:$navigationVersion",
         fragment_debug        : "androidx.fragment:fragment-testing:$fragmentKotlinVersion",
         hilt_android_test     : "com.google.dagger:hilt-android-testing:$daggerHiltVersion",
-        hilt_kapt_android_test: "com.google.dagger:hilt-android-compiler:$daggerHiltVersion"
+        hilt_kapt_android_test: "com.google.dagger:hilt-android-compiler:$daggerHiltVersion",
+        work_android_test     : "androidx.work:work-testing:$workVersion"
     ]
 }
 
