Add settings fragment.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     implementation libs.legacy
     implementation libs.recycler_view
     implementation libs.support_compat
+    implementation libs.preference
 
     // Activity and fragment extensions for kotlin
     implementation libs.activity
