--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ ext {
     activityKotlinVersion = "1.3.0-alpha04"
     androidTestJunitVersion = "1.1.2"
     androidXCoreVersion = "1.3.2"
+    androidXPreferenceVersion = "1.1.1"
     appCompatVersion = "1.2.0"
     archVersion = "2.1.0"
     constraintLayoutVersion = "2.0.4"
@@ -71,6 +72,7 @@ ext {
         legacy                : "androidx.legacy:legacy-support-v4:$legacySupportVersion",
         recycler_view         : "androidx.recyclerview:recyclerview:$recyclerViewVersion",
         support_compat        : "com.android.support:support-compat:$supportCompatVersion",
+        preference            : "androidx.preference:preference-ktx:$androidXPreferenceVersion",
 
         // Activity and fragment extensions for kotlin
         activity              : "androidx.activity:activity-ktx:$activityKotlinVersion",
