--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ ext {
     mockkVersion = "1.11.0"
     moshiVersion = "1.11.0"
     supportCompatVersion = "28.0.0"
+    playServicesLocation = "18.0.0"
     playServicesNearby = "17.0.0"
     recyclerViewVersion = "1.1.0"
     resultVersion = "4.0.0"
@@ -120,6 +121,7 @@ ext {
         firebaseBom           : "com.google.firebase:firebase-bom:$firebaseBomVersion",
         nearby                : "com.google.android.gms:play-services-nearby:$playServicesNearby",
         fcm                   : "com.google.firebase:firebase-messaging",
+        location              : "com.google.android.gms:play-services-location:$playServicesLocation",
 
         // Unit testing
         junit                 : "junit:junit:$junitVersion",
