Solve debug issue.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,10 @@ android {
     testOptions {
         unitTests.returnDefaultValues = true
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 kapt {
